# linty

./: .gitignore  .lintyconfig.json  .lintyconfig.toml  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
