[package]
name = "linty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.11", features = ["derive"] }
globset = "0.4.10"
ignore = "0.4.20"
regex = "1.8.4"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
